Cambio algunos tags

--- a/confirmardatos.html
+++ b/confirmardatos.html
@@ -1,97 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Centro Médico PAW</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Centro Médico PAW</title>
+  </head>
 
-<body>
-  <!--header-->
-  <header>
-    <h1>
-      <a href="index.html"><img src="img/logo.png" width="96px" height="96px" />
-        Centro Médico PAW
-      </a>
-      <form>
-        <input type="search" placeholder="Buscar ..." />
-        <button type="submit">Buscar</button>
-      </form>
-    </h1>
-  </header>
-  <!--header-->
-  <!--navbar-->
-  <nav>
-    <ul>
-      <li>
-        <a>Turnos</a>
-        <ul>
-          <li><a href="consultarturno.html">Consultar Turno</a></li>
-          <li><a href="solicitarturno.html">Solicitar Turnos</a></li>
-        </ul>
-      </li>
-      <li>
-        <a>Institucional</a>
-        <ul>
-          <li><a href="staff.html">Staff</a></li>
-          <li><a href="valores.html">Valores</a></li>
-        </ul>
-      </li>
-      <li><a href="noticias.html">Noticias</a></li>
-      <li><a href="obra-social.html">Obra Social</a></li>
-      <li><a href="especialidades-profesionales.html">Especialidades y profesionales</a></li>
-    </ul>
-  </nav>
-  <!--navbar-->
-  <!--body-->
-  <main><h2>Confirmar datos</h2>
-    <hr />
-    <section>
-        <form action="solicitarturno.html">
-          <label>Nombre y apellido:</label>
-          <p>juan perez</p> 
-          <label>Correo electrónico:</label>
-          <p>juanpe@gmail.com</p>
-          <label>DNI:</label>
-          <p>34111111</p>
-          <label>Teléfono:</label>
-          <p>2323 123456</p>
-          <label>Fecha de nacimiento:</label>
-          <p>31/03/98</p>
-          <label>Fecha del turno:</label>
-          <p>31/03/23</p>
-          <label>Hora del turno:</label>
-          <p>09:00</p>
-          <p>Especialidad:</p>
-            <p>Psiquiatria</p>
-          <p>Profesional:</p>
-            <p>JorgeMartinez</p>
-          <input type="button" value="Confirmar"/>
-          <input type="submit" value="Modificar datos"/>
+  <body>
+    <!--header-->
+    <header>
+      <h1>
+        <a href="index.html"><img src="img/logo.png" width="96px" height="96px" />
+          Centro Médico PAW
+        </a>
+        <form>
+          <input type="search" placeholder="Buscar ..." />
+          <button type="submit">Buscar</button>
         </form>
-        <input type="button" onclick="document.location.href='index.html'" name="Cancelar" value="Cancelar"> 
-      </section>
-  </main>
-</body>
-<!--body-->
-<!--footer-->
-<footer>
-  <p>Avalado por</p>
-  <a href="https://www.argentina.gob.ar/salud" target=_blank><img src="img/certificado.png" width="96"
-      height="96" /></a>
-  <p>Centro Médico PAW - Contacto</p>
-  <ul>
-    <li>Correo electrónico: juanperez@email.com</li>
-    <li>Teléfono: +1 (555) 555-5555</li>
-    <li>Dirección: 123 Calle Principal, Luján, 6700</li>
-  </ul>
-  <p>Redes</p>
-  <ul>
-    <a href="https://instagram.com" target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
-    <a href="https://twitter.com" target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
-    <a href="https://facebook.com" target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
-  </ul>
-</footer>
-<!--footer-->
+      </h1>
+    </header>
+    <!--header-->
+    <!--navbar-->
+    <nav>
+      <ul>
+        <li>
+          <a>Turnos</a>
+          <ul>
+            <li><a href="consultarturno.html">Consultar Turno</a></li>
+            <li><a href="solicitarturno.html">Solicitar Turnos</a></li>
+          </ul>
+        </li>
+        <li>
+          <a>Institucional</a>
+          <ul>
+            <li><a href="staff.html">Staff</a></li>
+            <li><a href="valores.html">Valores</a></li>
+          </ul>
+        </li>
+        <li><a href="noticias.html">Noticias</a></li>
+        <li><a href="obra-social.html">Obra Social</a></li>
+        <li><a href="especialidades-profesionales.html">Especialidades y profesionales</a></li>
+      </ul>
+    </nav>
+    <!--navbar-->
+    <!--body-->
+    <main><h2>Confirmar datos</h2>
+      <hr />
+      <form action="solicitarturno.html">
+        <label>Nombre y apellido:</label>
+        <p>juan perez</p> 
+        <label>Correo electrónico:</label>
+        <p>juanpe@gmail.com</p>
+        <label>DNI:</label>
+        <p>34111111</p>
+        <label>Teléfono:</label>
+        <p>2323 123456</p>
+        <label>Fecha de nacimiento:</label>
+        <p>31/03/98</p>
+        <label>Fecha del turno:</label>
+        <p>31/03/23</p>
+        <label>Hora del turno:</label>
+        <p>09:00</p>
+        <label>Especialidad:</label>
+          <p>Psiquiatria</p>
+        <label>Profesional:</label>
+          <p>JorgeMartinez</p>
+        <input type="button" value="Confirmar"/>
+        <input type="submit" value="Modificar datos"/>
+      </form>
+      <input type="button" onclick="document.location.href='index.html'" name="Cancelar" value="Cancelar">
+    </main>
+  </body>
+  <!--body-->
+  <!--footer-->
+  <footer>
+    <p>Avalado por</p>
+    <a href="https://www.argentina.gob.ar/salud" target=_blank><img src="img/certificado.png" width="96"
+        height="96" /></a>
+    <p>Centro Médico PAW - Contacto</p>
+    <ul>
+      <li>Correo electrónico: juanperez@email.com</li>
+      <li>Teléfono: +1 (555) 555-5555</li>
+      <li>Dirección: 123 Calle Principal, Luján, 6700</li>
+    </ul>
+    <p>Redes</p>
+    <ul>
+      <a href="https://instagram.com" target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
+      <a href="https://twitter.com" target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
+      <a href="https://facebook.com" target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
+    </ul>
+  </footer>
+  <!--footer-->
 
 </html>
