--- a/consultarturno.html
+++ b/consultarturno.html
@@ -1,84 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Centro Médico PAW</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Centro Médico PAW</title>
+  </head>
 
-<body>
-  <!--header-->
-  <header>
-    <h1>
-      <a href="index.html"><img src="img/logo.png" width="96px" height="96px" />
-        Centro Médico PAW
-      </a>
-      <form>
-        <input type="search" placeholder="Buscar ..." />
-        <button type="submit">Buscar</button>
-      </form>
-    </h1>
-  </header>
-  <!--header-->
-  <!--navbar-->
-  <nav>
-    <ul>
-      <li>
-        <a>Turnos</a>
-        <ul>
-          <li><a href="consultarturno.html">Consultar Turno</a></li>
-          <li><a href="solicitarturno.html">Solicitar Turnos</a></li>
-        </ul>
-      </li>
-      <li>
-        <a>Institucional</a>
-        <ul>
-          <li><a href="staff.html">Staff</a></li>
-          <li><a href="valores.html">Valores</a></li>
-        </ul>
-      </li>
-      <li><a href="noticias.html">Noticias</a></li>
-      <li><a href="obra-social.html">Obra Social</a></li>
-      <li><a href="especialidades-profesionales.html">Especialidades y profesionales</a></li>
-    </ul>
-  </nav>
-  <!--navbar-->
-  <!--body-->
-  <main><h2>Consultar Turno</h2>
-    <hr />
-    <section>
+  <body>
+    <!--header-->
+    <header>
+      <h1>
+        <a href="index.html"><img src="img/logo.png" width="96px" height="96px" />
+          Centro Médico PAW
+        </a>
+        <form>
+          <input type="search" placeholder="Buscar ..." />
+          <button type="submit">Buscar</button>
+        </form>
+      </h1>
+    </header>
+    <!--header-->
+    <!--navbar-->
+    <nav>
+      <ul>
+        <li>
+          <a>Turnos</a>
+          <ul>
+            <li><a href="consultarturno.html">Consultar Turno</a></li>
+            <li><a href="solicitarturno.html">Solicitar Turnos</a></li>
+          </ul>
+        </li>
+        <li>
+          <a>Institucional</a>
+          <ul>
+            <li><a href="staff.html">Staff</a></li>
+            <li><a href="valores.html">Valores</a></li>
+          </ul>
+        </li>
+        <li><a href="noticias.html">Noticias</a></li>
+        <li><a href="obra-social.html">Obra Social</a></li>
+        <li><a href="especialidades-profesionales.html">Especialidades y profesionales</a></li>
+      </ul>
+    </nav>
+    <!--navbar-->
+    <!--body-->
+    <main><h2>Consultar Turno</h2>
+      <hr />
       <form>
         <label>Ingrese el ID del turno:</label>
         <input type="text" placeholder="aNYE%&+_}!2"/>
         <button type="submit">Consultar</button>
       </form>
       <hr />
-      <p>Datos del turno:</p>
+      <label>Datos del turno:</label>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto iure sint exercitationem consequatur, beatae modi harum ipsum totam, perspiciatis recusandae voluptatem similique fugiat, corrupti facilis voluptatibus facere unde numquam mollitia?</p>
-      <p>Datos del profesional:</p>
+      <label>Datos del profesional:</label>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, inventore? Sit vero autem, laborum repellat eius molestiae ratione impedit in accusamus fuga porro tempora, iure earum alias quae hic vel.</p>
       <img src="img/personaej.png" width="96" height="96"/>
-    </section>
-  </main>
-</body>
-<!--body-->
-<!--footer-->
-<footer>
-  <p>Avalado por</p>
-  <a href="https://www.argentina.gob.ar/salud"target=_blank><img src="img/certificado.png" width="96" height="96" /></a>
-  <p>Centro Médico PAW - Contacto</p>
-  <ul>
-    <li>Correo electrónico: juanperez@email.com</li>
-    <li>Teléfono: +1 (555) 555-5555</li>
-    <li>Dirección: 123 Calle Principal, Luján, 6700</li>
-  </ul>
-  <p>Redes</p>
-  <ul>
-    <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
-    <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
-    <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
-  </ul>
-</footer>
-<!--footer-->
+    </main>
+  </body>
+  <!--body-->
+  <!--footer-->
+  <footer>
+    <p>Avalado por</p>
+    <a href="https://www.argentina.gob.ar/salud"target=_blank><img src="img/certificado.png" width="96" height="96" /></a>
+    <p>Centro Médico PAW - Contacto</p>
+    <ul>
+      <li>Correo electrónico: juanperez@email.com</li>
+      <li>Teléfono: +1 (555) 555-5555</li>
+      <li>Dirección: 123 Calle Principal, Luján, 6700</li>
+    </ul>
+    <p>Redes</p>
+    <ul>
+      <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
+      <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
+      <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
+    </ul>
+  </footer>
+  <!--footer-->
 
 </html>
