--- a/solicitarturno.html
+++ b/solicitarturno.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Centro Médico PAW</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Centro Médico PAW</title>
+  </head>
 
-<body>
-  <!--header-->
-  <header>
-    <h1>
-      <a href="index.html"><img src="img/logo.png" width="96px" height="96px" />
-        Centro Médico PAW
-      </a>
-      <form>
-        <input type="search" placeholder="Buscar ..." />
-        <button type="submit">Buscar</button>
-      </form>
-    </h1>
-  </header>
-  <!--header-->
-  <!--navbar-->
-  <nav>
-    <ul>
-      <li>
-        <a>Turnos</a>
-        <ul>
-          <li><a href="consultarturno.html">Consultar Turno</a></li>
-          <li><a href="solicitarturno.html">Solicitar Turnos</a></li>
-        </ul>
-      </li>
-      <li>
-        <a>Institucional</a>
-        <ul>
-          <li><a href="staff.html">Staff</a></li>
-          <li><a href="valores.html">Valores</a></li>
-        </ul>
-      </li>
-      <li><a href="noticias.html">Noticias</a></li>
-      <li><a href="obra-social.html">Obra Social</a></li>
-      <li><a href="especialidades-profesionales.html">Especialidades y profesionales</a></li>
-    </ul>
-  </nav>
-  <!--navbar-->
-  <!--body-->
-  <main><h2>Solicitar Turno</h2>
-    <hr />
-    <section>
+  <body>
+    <!--header-->
+    <header>
+      <h1>
+        <a href="index.html"><img src="img/logo.png" width="96px" height="96px" />
+          Centro Médico PAW
+        </a>
+        <form>
+          <input type="search" placeholder="Buscar ..." />
+          <button type="submit">Buscar</button>
+        </form>
+      </h1>
+    </header>
+    <!--header-->
+    <!--navbar-->
+    <nav>
+      <ul>
+        <li>
+          <a>Turnos</a>
+          <ul>
+            <li><a href="consultarturno.html">Consultar Turno</a></li>
+            <li><a href="solicitarturno.html">Solicitar Turnos</a></li>
+          </ul>
+        </li>
+        <li>
+          <a>Institucional</a>
+          <ul>
+            <li><a href="staff.html">Staff</a></li>
+            <li><a href="valores.html">Valores</a></li>
+          </ul>
+        </li>
+        <li><a href="noticias.html">Noticias</a></li>
+        <li><a href="obra-social.html">Obra Social</a></li>
+        <li><a href="especialidades-profesionales.html">Especialidades y profesionales</a></li>
+      </ul>
+    </nav>
+    <!--navbar-->
+    <!--body-->
+    <main><h2>Solicitar Turno</h2>
+      <hr />
       <form action="confirmardatos.html" tabindex="0">
         <label>Nombre y apellido:</label>
         <input type="text" placeholder="juan perez" tabindex="1"/>
@@ -58,53 +57,52 @@
         <input type="tel" placeholder="2323 123456" tabindex="4"/>
         <label>Fecha de nacimiento:</label>
         <input type="date" tabindex="5"/>
-        <p for="Especialidad">Escoja una especialidad</p>
+        <label for="listaEspecialidades">Escoja una especialidad</label>
         <input list="listaEspecialidades" />
         <datalist id="listaEspecialidades" tabindex="6">
-          <option value=""selected hidden disabled>Seleccione</option>
-          <option value="Psiquiatria">Psiquiatria</option>
-          <option value="Ortopedia">Ortopedia</option>
-          <option value="Neurologia">Neurologia</option>
-          <option value="Cardiologia">Cardiologia</option>
+          <option value="" selected hidden disabled>Seleccione</option>
+          <option value="Psiquiatria">Psiquiatría</option>
+          <option value="Ortopedia">Ortopedía</option>
+          <option value="Neurologia">Neurología</option>
+          <option value="Cardiologia">Cardiología</option>
         </datalist>
-        <p for="Profesional">Escoja un/a profesional</p>
+        <label for="listaProfesionales">Escoja un/a profesional</label>
         <input list="listaProfesionales"/>
         <datalist id="listaProfesionales" tabindex="7">
-          <option value=""selected hidden disabled>Seleccione</option>
+          <option value="" selected hidden disabled>Seleccione</option>
           <option value="AnaGarcia">Dra. Ana García</option>
           <option value="JorgeMartinez">Dr. Jorge Martínez</option>
           <option value="VeroSanchez">Dra. Verónica Sánchez</option>
           <option value="JuanRodriguez">Dr. Juan Rodríguez</option>
         </datalist>
-        <p>Fechas disponibles</p>
+        <label>Fechas disponibles</label>
         <input type="date" tabindex="8"/>
         <label>Hora del turno</label>
         <input type="time" tabindex="9"/>
         <input type="submit" value="Confirmar" tabindex="10"/>
       </form>
-      <input type="button" onclick="document.location.href='index.html'" name="Cancelar" value="Cancelar" tabindex="11"> 
-    </section>
-  </main>
-</body>
-<!--body-->
-<!--footer-->
-<footer>
-  <p>Avalado por</p>
-  <a href="https://www.argentina.gob.ar/salud" target=_blank><img src="img/certificado.png" width="96"
-      height="96" /></a>
-  <p>Centro Médico PAW - Contacto</p>
-  <ul>
-    <li>Correo electrónico: juanperez@email.com</li>
-    <li>Teléfono: +1 (555) 555-5555</li>
-    <li>Dirección: 123 Calle Principal, Luján, 6700</li>
-  </ul>
-  <p>Redes</p>
-  <ul>
-    <a href="https://instagram.com" target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
-    <a href="https://twitter.com" target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
-    <a href="https://facebook.com" target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
-  </ul>
-</footer>
-<!--footer-->
+      <input type="button" onclick="document.location.href='index.html'" name="Cancelar" value="Cancelar" tabindex="11">
+    </main>
+  </body>
+  <!--body-->
+  <!--footer-->
+  <footer>
+    <p>Avalado por</p>
+    <a href="https://www.argentina.gob.ar/salud" target=_blank><img src="img/certificado.png" width="96"
+        height="96" /></a>
+    <p>Centro Médico PAW - Contacto</p>
+    <ul>
+      <li>Correo electrónico: juanperez@email.com</li>
+      <li>Teléfono: +1 (555) 555-5555</li>
+      <li>Dirección: 123 Calle Principal, Luján, 6700</li>
+    </ul>
+    <p>Redes</p>
+    <ul>
+      <a href="https://instagram.com" target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
+      <a href="https://twitter.com" target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
+      <a href="https://facebook.com" target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
+    </ul>
+  </footer>
+  <!--footer-->
 
 </html>
