--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Centro Médico PAW</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
   </head>
 
   <body>
@@ -21,18 +23,18 @@
     </header>
     <!--header-->
     <!--navbar-->
-    <nav>
+    <nav class="navbar">
       <ul>
-        <li>
+        <li class ="navbarDropOption">
           <a>Turnos</a>
           <ul>
             <li><a href="consultarturno.html">Consultar Turno</a></li>
             <li><a href="solicitarturno.html">Solicitar Turnos</a></li>
           </ul>
         </li>
-        <li>
+        <li class ="navbarDropOption">
           <a>Institucional</a>
-          <ul>
+          <ul class ="navbarDropOption">
             <li><a href="staff.html">Staff</a></li>
             <li><a href="valores.html">Valores</a></li>
           </ul>
