añadido del estilo del header

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <!--header-->
     <header>
       <h1>
-        <a href="index.html"><img src="img/logo.png" width="96px" height="96px" />
-          Centro Médico PAW
-        </a>
-        <form>
+        <a href="index.html"></a>
+        <form class="Buscador">
           <input type="search" placeholder="Buscar ..." />
           <button type="submit">Buscar</button>
         </form>
