arreglada la barra de busqueda en css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1>
         <a href="index.html"></a>
         <form class="Buscador">
-          <input type="search" placeholder="Buscar ..." />
-          <button type="submit">Buscar</button>
+          <input type="text" id="search" name="search" placeholder="Escribe aquí tu búsqueda" /><br />
+          <input type="submit" value="&#128269;"/>
         </form>
       </h1>
     </header>
