detalles de la barra de busqueda

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1>
         <a href="index.html"></a>
         <form class="Buscador">
-          <input type="text" id="search" name="search" placeholder="Escribe aquí tu búsqueda" /><br />
-          <input type="submit" value="&#128269;"/>
+          <input type="text" id="search" name="search" placeholder="Escribe aquí tu búsqueda" class="search-box"/>
+          <input type="submit" value="&#128269;" class="search-box"/>
         </form>
       </h1>
     </header>
