--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!--body-->
     <main>
       <!--secciones-->
-      <section>
+      <section class="formulario">
         <!--necesito usar form para pedir los datos--> 
         <h2>Solicite su turno</h2>
         <form action="solicitarturno.html" tabindex="0">
