--- a/index.html
+++ b/index.html
@@ -124,21 +124,26 @@
   <!--body-->
   <!--footer-->
   <footer>
-    <p>Avalado por</p>
-    <a href="https://www.argentina.gob.ar/salud"target=_blank><img src="img/certificado.png" width="96" height="96" /></a>
-    <p>Centro Médico PAW - Contacto</p>
-    <ul>
-      <li>Correo electrónico: juanperez@email.com</li>
-      <li>Teléfono: +1 (555) 555-5555</li>
-      <li>Dirección: 123 Calle Principal, Luján, 6700</li>
-    </ul>
-    <p>Redes</p>
-    <ul>
-      <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
-      <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
-      <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
-    </ul>
+    <li class="certificadoFooter">
+      <p>Avalado por</p>
+      <a href="https://www.argentina.gob.ar/salud"target=_blank><img src="img/certificado.png" width="96" height="96" /></a>    
+    </li>
+    <li class="contactoFooter">
+      <p>UNLu PAW UL Hospitals - Contacto</p>
+      <ul>
+        <li>Correo electrónico: juanperez@email.com</li>
+        <li>Teléfono: +1 (555) 555-5555</li>
+        <li>Dirección: 123 Calle Principal, Luján, 6700</li>
+      </ul>
+    </li>
+    <li class="redesFooter">
+      <p>Redes</p>
+      <ul>
+        <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
+        <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
+        <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
+      </ul>
+    </li>
   </footer>
   <!--footer-->
-
 </html>
