agregue imagen ministerio de salud y corregi marge

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <footer>
     <li class="certificadoFooter">
       <p>Avalado por</p>
-      <a href="https://www.argentina.gob.ar/salud"target=_blank><img src="img/certificado.png" width="96" height="96" /></a>    
+      <a class="logoCertificadoFooter" href="https://www.argentina.gob.ar/salud"target=_blank></a>    
     </li>
     <li class="contactoFooter">
       <p>UNLu PAW UL Hospitals - Contacto</p>
