--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </form>
       </section>
 
-      <section>
+      <section class="noticias">
         <h2>Noticias</h2>
         <ul>
           <li>
