hecha la parte de noticias

--- a/index.html
+++ b/index.html
@@ -93,10 +93,21 @@
         <ul>
           <li>
             <!--necesito poner dentro de la seccion articulos, 2 por ejemplo-->
-            <a href="noticias.html" target="_blank"><img src="img/noticiaej.png" width="48" height="48" />Noticia ejemplo</a>
+            <a href="noticias.html" target="_blank">
+              <article>
+                <h3>Noticia ejemplo</h3>
+                <img src="img/noticiaej.png"/>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+              </article>
+            </a>
           </li>
           <li>
-            <a href="noticias.html" target="_blank"><img src="img/noticiaej.png" width="48" height="48" />Noticia ejemplo</a>
+            <a href="noticias.html" target="_blank">
+              <article>
+                <h3>Noticia ejemplo</h3>
+                <p><img src="img/noticiaej.png"/>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+              </article>
+            </a>
           </li>
         </ul>
       </section>
