--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="ubicacion">
         <h2>Donde nos podés encontrar</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.060752478424!2d-59.093086973046894!3d-34.57732929999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc877639af966d%3A0x937cf2a3a61e9b56!2sUniversidad%20Nacional%20de%20Luj%C3%A1n!5e0!3m2!1ses-419!2sar!4v1679530400843!5m2!1ses-419!2sar"
@@ -121,7 +121,7 @@
         </iframe>
       </section>
 
-      <section>
+      <section class="elegirnos">
         <h2>¿Por qué elegirnos?</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis veritatis repellendus sint numquam vitae dolores pariatur voluptatem iste consequatur incidunt ea ad, voluptas quo quibusdam impedit quam quasi corporis doloremque!</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/aahyZICBe90" title="YouTube video player"
