modifico htmls para que todos usen el style.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>Centro Médico PAW</title>
+    <title>UNLu PAW UL Hospitals</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
   </head>
@@ -131,30 +131,30 @@
         </iframe>
       </section>
     </main>
+    <!--body-->
+    <!--footer-->
+    <footer>
+      <li class="certificadoFooter">
+        <p>Avalado por</p>
+        <a class="logoCertificadoFooter" href="https://www.argentina.gob.ar/salud"target=_blank></a>    
+      </li>
+      <li class="contactoFooter">
+        <p>UNLu PAW UL Hospitals - Contacto</p>
+        <ul>
+          <li>Correo electrónico: juanperez@email.com</li>
+          <li>Teléfono: +1 (555) 555-5555</li>
+          <li>Dirección: 123 Calle Principal, Luján, 6700</li>
+        </ul>
+      </li>
+      <li class="redesFooter">
+        <p>Redes</p>
+        <ul>
+          <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
+          <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
+          <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
+        </ul>
+      </li>
+    </footer>
+    <!--footer-->
   </body>
-  <!--body-->
-  <!--footer-->
-  <footer>
-    <li class="certificadoFooter">
-      <p>Avalado por</p>
-      <a class="logoCertificadoFooter" href="https://www.argentina.gob.ar/salud"target=_blank></a>    
-    </li>
-    <li class="contactoFooter">
-      <p>UNLu PAW UL Hospitals - Contacto</p>
-      <ul>
-        <li>Correo electrónico: juanperez@email.com</li>
-        <li>Teléfono: +1 (555) 555-5555</li>
-        <li>Dirección: 123 Calle Principal, Luján, 6700</li>
-      </ul>
-    </li>
-    <li class="redesFooter">
-      <p>Redes</p>
-      <ul>
-        <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
-        <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
-        <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
-      </ul>
-    </li>
-  </footer>
-  <!--footer-->
 </html>
