--- a/template.html
+++ b/template.html
@@ -3,7 +3,9 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>Centro Médico PAW</title>
+    <title>UNLu PAW UL Hospitals</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link href="https://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
   </head>
 
   <body>
@@ -51,20 +53,26 @@
   <!--body-->
   <!--footer-->
   <footer>
-    <p>Avalado por</p>
-    <a href="https://www.argentina.gob.ar/salud"target=_blank><img src="img/certificado.png" width="96" height="96" /></a>
-    <p>Centro Médico PAW - Contacto</p>
-    <ul>
-      <li>Correo electrónico: juanperez@email.com</li>
-      <li>Teléfono: +1 (555) 555-5555</li>
-      <li>Dirección: 123 Calle Principal, Luján, 6700</li>
-    </ul>
-    <p>Redes</p>
-    <ul>
-      <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
-      <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
-      <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
-    </ul>
+    <li class="certificadoFooter">
+      <p>Avalado por</p>
+      <a class="logoCertificadoFooter" href="https://www.argentina.gob.ar/salud"target=_blank></a>    
+    </li>
+    <li class="contactoFooter">
+      <p>UNLu PAW UL Hospitals - Contacto</p>
+      <ul>
+        <li>Correo electrónico: juanperez@email.com</li>
+        <li>Teléfono: +1 (555) 555-5555</li>
+        <li>Dirección: 123 Calle Principal, Luján, 6700</li>
+      </ul>
+    </li>
+    <li class="redesFooter">
+      <p>Redes</p>
+      <ul>
+        <a href="https://instagram.com"target=_blank><img src="img/instagram.png" width="48" height="48" /></a>
+        <a href="https://twitter.com"target=_blank><img src="img/twitter.png" width="48" height="48" /></a>
+        <a href="https://facebook.com"target=_blank><img src="img/facebook.png" width="48" height="48" /></a>
+      </ul>
+    </li>
   </footer>
   <!--footer-->
 
