--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
               <article>
                 <h3>Noticia ejemplo</h3>
                 <img src="img/noticiaej.png"/>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet tellus cras adipiscing enim eu. Purus semper eget duis at tellus at. Pellentesque habitant morbi tristique senectus et netus et malesuada. Metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Adipiscing enim eu turpis egestas pretium aenean pharetra magna ac. Consequat id porta nibh venenatis cras. Gravida quis blandit turpis cursus. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Ac ut consequat semper viverra. Dolor sit amet consectetur adipiscing elit pellentesque habitant.
+
+Amet purus gravida quis blandit turpis cursus in hac habitasse. Aliquet risus feugiat in ante metus dictum at tempor commodo. Amet commodo nulla facilisi nullam. A scelerisque purus semper eget duis at tellus at urna. Ornare lectus sit amet est. Auctor elit sed vulputate mi sit amet. Dolor purus non enim praesent elementum facilisis. Sit amet venenatis urna cursus eget nunc scelerisque viverra mauris. In ornare quam viverra orci sagittis eu volutpat odio facilisis. Ullamcorper malesuada proin libero nunc. Massa placerat duis ultricies lacus sed turpis tincidunt id. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Sed cras ornare arcu dui. Aenean euismod elementum nisi quis eleifend quam adipiscing. Ut venenatis tellus in metus vulputate. Eu nisl nunc mi ipsum faucibus vitae aliquet. Tristique nulla aliquet enim tortor at auctor urna nunc.</p>
               </article>
             </a>
           </li>
@@ -105,7 +107,8 @@
             <a href="noticias.html" target="_blank">
               <article>
                 <h3>Noticia ejemplo</h3>
-                <p><img src="img/noticiaej.png"/>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <img src="img/noticiaej.png"/>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
               </article>
             </a>
           </li>
