css añadido para consultarturno

--- a/consultarturno.html
+++ b/consultarturno.html
@@ -44,7 +44,7 @@
     </nav>
     <!--navbar-->
     <!--body-->
-    <main><h2>Consultar Turno</h2>
+    <main class="consultarturno"><h2>Consultar Turno</h2>
       <hr />
       <form>
         <label>Ingrese el ID del turno:</label>
@@ -55,8 +55,8 @@
       <label>Datos del turno:</label>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto iure sint exercitationem consequatur, beatae modi harum ipsum totam, perspiciatis recusandae voluptatem similique fugiat, corrupti facilis voluptatibus facere unde numquam mollitia?</p>
       <label>Datos del profesional:</label>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, inventore? Sit vero autem, laborum repellat eius molestiae ratione impedit in accusamus fuga porro tempora, iure earum alias quae hic vel.</p>
-      <img src="img/personaej.png" width="96" height="96"/>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, inventore? Sit vero autem, laborum repellat eius molestiae ratione impedit in accusamus fuga porro tempora, iure earum alias quae hic vel.consectetur adipisicing elit. Quo, inventore? Sit vero autem, laborum repellat eius molestiae ratione impedit in accusamus fuga porro tempora, iure earum alias quae hic vel.</p>
+      <img src="img/personaej.png"/>
     </main>
     <!--body-->
     <!--footer-->
