css staff con error

--- a/staff.html
+++ b/staff.html
@@ -44,7 +44,7 @@
     </nav>
     <!--navbar-->
     <!--body-->
-    <main><h2>Directorio</h2>
+    <main class="staff"><h2>Directorio</h2>
       <hr />
       <table>
         <tr>
