--- a/consultarturno.html
+++ b/consultarturno.html
@@ -49,7 +49,7 @@
       <form>
         <label>Ingrese el ID del turno:</label>
         <input type="text" placeholder="aNYE%&+_}!2"/>
-        <button type="submit">Consultar</button>
+        <input type="submit" value="Consultar"/>
       </form>
       <hr />
       <label>Datos del turno:</label>
