Cambio tabla por grid en especialidades

--- a/especialidades-profesionales.html
+++ b/especialidades-profesionales.html
@@ -44,7 +44,7 @@
     </nav>
     <!--navbar-->
     <!--body-->
-    <main><h2>Especialidades y profesionales</h2>
+    <main class="grilla"><h2>Especialidades y profesionales</h2>
       <hr />
       <form>
         <label for="listaEspecialidades">Escoja una especialidad</label>
@@ -71,76 +71,69 @@
       </form>
       
       <hr />
-      <table>
-        <tr>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-          <td>
-            <img src="img/personaej.png" width="48" height="48" />
-            <p>Nombre</p>
-            <p>Rango</p>
-          </td>
-        </tr>
-      </table>
+      <ul>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+        <li>
+          <img src="img/personaej.png" width="48" height="48" />
+          <p>Nombre</p>
+          <p>Rango</p>
+        </li>
+      </ul>
+
     </main>
     <!--body-->
     <!--footer-->
