--- a/staff.html
+++ b/staff.html
@@ -44,7 +44,7 @@
     </nav>
     <!--navbar-->
     <!--body-->
-    <main class="staff"><h2>Directorio</h2>
+    <main class="grilla"><h2>Directorio</h2>
       <hr />
 
       <ul>
