--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!--secciones-->
       <section class="formulario">
         <!--necesito usar form para pedir los datos--> 
-        <h2>Solicite su turno</h2>
+        <h2>Solicitar Turno</h2>
         <form action="solicitarturno.html" tabindex="0">
           <label>Nombre y Apellido</label>
           <input type="text" placeholder="Ej: Pedro alvarez" tabindex="1"/>
