--- a/solicitarturno.html
+++ b/solicitarturno.html
@@ -44,9 +44,8 @@
     </nav>
     <!--navbar-->
     <!--body-->
-    <main><h2>Solicitar Turno</h2>
-      <hr />
-      <form class="form-turno"action="confirmardatos.html" tabindex="0">
+    <main class="formulario"><h2>Solicitar Turno</h2>
+      <form action="confirmardatos.html" tabindex="0">
         <label>Nombre y apellido:</label>
         <input type="text" placeholder="juan perez" tabindex="1"/>
         <label>Correo electrónico</label>
