css hecho de noticias y fix noticias index fecha

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             <a href="noticias.html" target="_blank">
               <article>
                 <h3>Noticia ejemplo</h3>
+                <small>12/4/23</small>
+                <br>
                 <img src="img/noticiaej.png"/>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet tellus cras adipiscing enim eu. Purus semper eget duis at tellus at. Pellentesque habitant morbi tristique senectus et netus et malesuada. Metus vulputate eu scelerisque felis imperdiet proin fermentum leo. Adipiscing enim eu turpis egestas pretium aenean pharetra magna ac. Consequat id porta nibh venenatis cras. Gravida quis blandit turpis cursus. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Ac ut consequat semper viverra. Dolor sit amet consectetur adipiscing elit pellentesque habitant.
 
@@ -107,6 +109,8 @@ Amet purus gravida quis blandit turpis cursus in hac habitasse. Aliquet risus fe
             <a href="noticias.html" target="_blank">
               <article>
                 <h3>Noticia ejemplo</h3>
+                <small>31/3/23</small>
+                <br>
                 <img src="img/noticiaej.png"/>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
               </article>
