--- a/noticias.html
+++ b/noticias.html
@@ -46,51 +46,115 @@
     <!--body-->
     <main><h2>Novedades de la institución</h2>
       <hr />
-      
-      <ul>
+      <ul class="noticias">
         <li>
           <article>
             <h3>Noticia ejemplo</h3>
-            <p>Fecha</p>
+            <small>12/4/23</small>
+            <br>
             <img src="img/noticiaej.png" width="89" height="89" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
-            <a href="noticias.html" target="_self">ver más</a>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
           </article>
         </li>
         <li>
           <article>
             <h3>Noticia ejemplo</h3>
-            <p>Fecha</p>
+            <small>12/4/23</small>
+            <br>
             <img src="img/noticiaej.png" width="89" height="89" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
-            <a href="noticias.html" target="_self">ver más</a>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
           </article>
         </li>
         <li>
           <article>
             <h3>Noticia ejemplo</h3>
-            <p>Fecha</p>
+            <small>12/4/23</small>
+            <br>
             <img src="img/noticiaej.png" width="89" height="89" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
-            <a href="noticias.html" target="_self">ver más</a>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
           </article>
         </li>
         <li>
           <article>
             <h3>Noticia ejemplo</h3>
-            <p>Fecha</p>
+            <small>12/4/23</small>
+            <br>
             <img src="img/noticiaej.png" width="89" height="89" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
-            <a href="noticias.html" target="_self">ver más</a>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
           </article>
         </li>
         <li>
           <article>
             <h3>Noticia ejemplo</h3>
-            <p>Fecha</p>
+            <small>12/4/23</small>
+            <br>
             <img src="img/noticiaej.png" width="89" height="89" />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
-            <a href="noticias.html" target="_self">ver más</a>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Noticia ejemplo</h3>
+            <small>12/4/23</small>
+            <br>
+            <img src="img/noticiaej.png" width="89" height="89" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Noticia ejemplo</h3>
+            <small>12/4/23</small>
+            <br>
+            <img src="img/noticiaej.png" width="89" height="89" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Noticia ejemplo</h3>
+            <small>12/4/23</small>
+            <br>
+            <img src="img/noticiaej.png" width="89" height="89" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Noticia ejemplo</h3>
+            <small>12/4/23</small>
+            <br>
+            <img src="img/noticiaej.png" width="89" height="89" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Noticia ejemplo</h3>
+            <small>12/4/23</small>
+            <br>
+            <img src="img/noticiaej.png" width="89" height="89" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
+          </article>
+        </li>
+        <li>
+          <article>
+            <h3>Noticia ejemplo</h3>
+            <small>12/4/23</small>
+            <br>
+            <img src="img/noticiaej.png" width="89" height="89" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsa consequatur quam laboriosam reiciendis laudantium iusto nam quo iste eius repellat consequuntur, unde fuga recusandae minima temporibus debitis dolorem magnam.</p>
+            <a class="vermas" href="noticias.html" target="_self">ver más</a>
           </article>
         </li>
       </ul>
