fix especialidades button

--- a/especialidades-profesionales.html
+++ b/especialidades-profesionales.html
@@ -67,7 +67,7 @@
           <option value="JuanRodriguez">Dr. Juan Rodríguez</option>
         </datalist>
 
-        <input type="button" value="Continuar" />
+        <input type="submit" value="Continuar" />
       </form>
       
       <hr />
